type aliases union

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <input type="number" id="input2">
     <button id="btn1">SOMA</button>
 
-    <script src="./study.ts"></script>
+    <script src="./dist/study.js"></script>
 </body>
 </html>
